# santander

./: README.md  pyproject.toml
santander/: banco.py  cli.py
