[project]
name = "santander"
version = "0.1.0"
description = ""
authors = [{ name = "K Maximo", email = "klinsmann_max@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click (>=8.2.1,<9.0.0)", "rich-click (>=1.8.9,<2.0.0)"]

[tool.poetry.scripts]
santander = "santander.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
